# mcp-odoo-panda

./: .gitignore  CONFIGURATION.md  Dockerfile  LEGGIMI.md  README.md  README_ORM_TOOLS.md  README_REFACTORED.md  README_aggregation_error_fix.md  README_create_method_fix.md  README_domain_validation_fix.md  README_method_not_found_fix.md  README_read_group_fix.md  README_read_group_format_fix.md  README_read_method_fix.md  README_schema_standardization.md  REFACTORING_SUMMARY.md  docker-compose.override.yml.example  docker-compose.yml  mcp_server_sdk.py  pyproject.toml  requirements.txt  test_aggregation_error_fix.py  test_create_method_fix.py  test_domain_validation_fix.py  test_jsonrpc_fix.py  test_method_not_found_fix.py  test_read_group_fix.py  test_read_group_nonstandard_format.py  test_read_method_fix.py  test_refactored_components.py  test_schema_standardization.py  update_orm_tools.py  update_remaining_methods.py
.cursor/rules/: mcp-server-rules.mdc
config/: actions_registry.yaml
docs/: API_REFERENCE.md  DEVELOPER_GUIDE.md  DOCKER_DEPLOYMENT.md  DOCKER_FINAL_STATUS.md  GIT_AND_CACHE_MANAGEMENT.md  MCP_SERVER_CAPABILITIES.md  classes.md  mcp_protocol.md  odoo_server.md  server_usage.md
fastmcp/: __init__.py  decorators.py
mcp/: __init__.py  base.py  client.py  config.py  log_config.py  logging.py  resource_types.py  server.py
mcp/protocol/: __init__.py
mcp_local_backup/: resource_types.py  server.py
mcp_local_backup/protocol/: sse.py  stdio.py
odoo_mcp/: actions.py  domain_dsl.py  mcp_server_sdk.py  schema.py
odoo_mcp/authentication/: authenticator.py
odoo_mcp/config/: config.dev.yaml  config.example.yaml  config.json  config.prod.yaml  inspector.json
odoo_mcp/connection/: connection_pool.py  session_manager.py
odoo_mcp/core/: authenticator.py  base_handler.py  bus_handler.py  capabilities_manager.py  connection_pool.py  handler_factory.py  jsonrpc_handler.py  logging_config.py  mcp_server.py  mcp_server.py.bak  protocol_handler.py  rate_limiter.py  request_models.py  resource_manager.py  session_manager.py  xmlrpc_handler.py
odoo_mcp/error_handling/: exceptions.py
odoo_mcp/examples/: basic_usage.py
odoo_mcp/performance/: caching.py
odoo_mcp/prompts/: prompt_manager.py
odoo_mcp/resources/: resource_manager.py
odoo_mcp/security/: orm_security.py  utils.py
odoo_mcp/tests/: test_authenticator.py  test_connection_pool.py  test_jsonrpc_handler.py  test_security_utils.py  test_session_manager.py  test_xmlrpc_handler.py
odoo_mcp/tools/: __init__.py  orm_tools.py  tool_manager.py
odoo_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_domain_dsl.py  test_mcp_server.py  test_refactored_architecture.py
tests/mcp/: test_auth.py  test_client.py  test_config.py  test_connection.py  test_errors.py  test_logging.py  test_notifications.py  test_rate_limit.py  test_session.py  test_types.py
