[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-odoo-panda"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for Odoo ERP integration."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Paolo Nugnes", email = "info@techlab.it" },
  { name = "TechLab", email = "info@techlab.it" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
keywords = ["odoo", "mcp", "erp", "integration", "rpc", "model-context-protocol"]

dependencies = [
    "requests>=2.20.0",
    "httpx>=0.20.0",
    "PyYAML>=5.4",
    "pydantic>=2.0",
    "aiohttp>=3.8.0",
    "aiohttp-sse>=2.1.0",
    "websockets>=10.0",
]

# Optional dependencies allow installing cachetools explicitly
[project.optional-dependencies]
caching = ["cachetools>=4.2"]
dev = [
    "pytest>=6.0",
    "pytest-asyncio",
    "flake8",
    "mypy",
    "types-PyYAML",
    "types-requests",
    "types-cachetools",
    "respx",
]

[project.urls]
Homepage = "https://github.com/pandeussilvae/mcp-odoo-panda"
Documentation = "https://github.com/pandeussilvae/mcp-odoo-panda/tree/main/docs"
Repository = "https://github.com/pandeussilvae/mcp-odoo-panda.git"
Issues = "https://github.com/pandeussilvae/mcp-odoo-panda/issues"

# Entry point to run the server (optional)
# This allows running 'odoo-mcp-server' from command line after installation
[project.scripts]
odoo-mcp-server = "odoo_mcp.core.mcp_server:main_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp*", "odoo_mcp*"]
exclude = ["odoo_mcp.tests*", "odoo_mcp.examples*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "build", "dist"]
per-file-ignores = [
    "__init__.py:F401",
]
